[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/wave.gd" type="Script" id=1]

[node name="Wave" type="Node"]
script = ExtResource( 1 )

[node name="EndTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="EarlyEndTimer" type="Timer" parent="."]
wait_time = 5.0
[connection signal="timeout" from="EndTimer" to="." method="_on_EndTimer_timeout"]
[connection signal="timeout" from="EarlyEndTimer" to="." method="_on_EarlyEndTimer_timeout"]
